Link tags with tasks
