# app/serializers/task_serializer.rb
@@ -1,3 +1,7 @@
 class TaskSerializer < ApplicationSerializer
-  attributes :id, :title, :description, :scheduled_at, :status, :created_at, :updated_at
+  attributes :id, :title, :description, :scheduled_at, :status, :tags, :created_at, :updated_at
+
+  def tags
+    object.tags.order(:name).pluck(:name)
+  end
 end
